src-tauri/src/ytdlp/snapshots/ymd_lib__ytdlp__args__tests__download_mp4-720_windows.snap
---
source: src/ytdlp/args.rs
expression: args
---
- "--ignore-config"
- "--color"
- never
- "--encoding"
- utf-8
- "--newline"
- "--progress"
- "--no-simulate"
- "--progress-template"
- "download:YMD|%(progress)j"
- "--progress-template"
- "postprocess:YMD_PP|%(progress.status)s|%(progress.postprocessor)s"
- "--print"
- "before_dl:YMD_META|%(title)s"
- "--print"
- "before_dl:YMD_ITEM|%(playlist_autonumber)s|%(n_entries)s"
- "--print"
- "after_move:YMD_FILE|%(filepath)s"
- "-P"
- "home:C:\\Users\\user\\Videos"
- "-P"
- "temp:C:\\Users\\user\\AppData\\Roaming\\com.ymd.app\\tmp\\job-1"
- "-o"
- "%(title)s [%(id)s].%(ext)s"
- "--windows-filenames"
- "-N"
- "4"
- "--ffmpeg-location"
- "C:\\Users\\user\\AppData\\Local\\ymd\\bin"
- "--no-js-runtimes"
- "--js-runtimes"
- "deno:C:\\Users\\user\\AppData\\Local\\ymd\\bin\\deno.exe"
- "-f"
- "bv*[height<=720]+ba/b[height<=720]"
- "-S"
- "res,ext:mp4:m4a"
- "--merge-output-format"
- mp4
- "--embed-thumbnail"
- "--embed-metadata"
- "--no-playlist"
- "--"
- "https://www.youtube.com/watch?v=YE7VzlLtp-4"
