src-tauri/src/ytdlp/snapshots/ymd_lib__ytdlp__args__tests__probe_no_tools.snap
---
source: src/ytdlp/args.rs
expression: "probe_args(URL, &Tools::default(), &[])"
---
- "--ignore-config"
- "--color"
- never
- "--encoding"
- utf-8
- "-J"
- "--flat-playlist"
- "--no-playlist"
- "--no-warnings"
- "--"
- "https://www.youtube.com/watch?v=YE7VzlLtp-4"
